# quick-orm

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml  pytest.ini
quick/: __init__.py  cli.py
quick/orm/: __init__.py  __version__.py  cache.py  error_handler.py  exceptions.py  logger.py  mixins.py  profiler.py  scopes.py  seeder.py  types.py
quick/orm/columns/: __init__.py  base.py  numeric.py  special.py  string.py  temporal.py
quick/orm/core/: __init__.py  config.py  connection.py  database.py  transaction.py
quick/orm/generator/: __init__.py  code_generator.py  parser.py
quick/orm/migrations/: __init__.py  base.py  blueprint.py  runner.py  schema.py
quick/orm/models/: __init__.py  base.py  decorators.py
quick/orm/query/: __init__.py  builder.py  bulk.py  delete.py  insert.py  update.py
quick/orm/relations/: __init__.py  base.py  polymorphic.py
quick/orm/schema/: __init__.py  inspector.py
quick/orm/validators/: __init__.py  numeric.py  string.py
scripts/: create_examples.py
scripts/examples/: basic_usage.py  caching_example.py  relations_example.py  seeding_example.py
tests/pytest/: test_cache.py  test_crud_operations.py  test_exceptions.py  test_generator.py
