[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-opg"
version = "0.1.0"
description = "Async PostgreSQL ORM with YAML-based model generation"
authors = [{name = "Sattorbek Sa'dullayev", email = "sattorbeksadullayev1@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["orm", "postgresql", "async", "asyncpg", "database", "sql", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

dependencies = [
    "asyncpg>=0.29.0",
    "click>=8.1.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project.scripts]
quick = "quick.cli:cli"

[project.urls]
Homepage = "https://github.com/sattorbeksadullayev1/quick-orm"
Repository = "https://github.com/sattorbeksadullayev1/quick-orm"
Issues = "https://github.com/sattorbeksadullayev1/quick-orm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["quick*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
